Copying solution from solution branch to solution folder #1

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.15.3",
+    "express-handlebars": "^3.0.0",
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
